@@ -129,17 +129,19 @@
 				
 				local englishToAmericanSpelling =
 				{
-					Optimise = 'Optimize',
-					OptimiseSize = 'OptimizeSize',
-					OptimiseSpeed = 'OptimizeSpeed'
+					optimise = 'optimize',
+					optimisesize = 'optimizesize',
+					optimisespeed = 'optimizespeed',				
 				}
-				
-				if englishToAmericanSpelling[value] then value = englishToAmericanSpelling[value] end
-			
-				if allowed_flags[value] then return value 
-				else 
-					return nil, "invalid flag"
+
+				local lowervalue = value:lower()
+				lowervalue = englishToAmericanSpelling[lowervalue] or lowervalue
+				for v, _ in pairs(allowed_flags) do
+					if v:lower() == lowervalue then
+						return v
+					end				
 				end
+				return nil, "invalid flag"
 			end,
 		},
 		
