@@ -384,3 +384,21 @@
 		uuid "7CBB5FC2-7449-497f-947F-129C5129B1FB"
 		test.isequal(premake.CurrentContainer.uuid, "7CBB5FC2-7449-497F-947F-129C5129B1FB")
 	end
+
+
+--
+-- Fields with allowed value lists should be case-insensitive.
+--
+
+	function suite.flags_onCaseMismatch()
+		premake.CurrentConfiguration = {}
+		flags "symbols"
+		test.isequal(premake.CurrentConfiguration.flags[1], "Symbols")
+	end
+
+	function suite.flags_onCaseMismatchAndAlias()
+		premake.CurrentConfiguration = {}
+		flags "optimisespeed"
+		test.isequal(premake.CurrentConfiguration.flags[1], "OptimizeSpeed")
+	end
+		
